--- a/bib/database.bib
+++ b/bib/database.bib
@@ -4,20 +4,22 @@
   url={https://www.efchina.org/Attachments/Report/report-lceg-20210430-3/2020%E8%83%BD%E6%BA%90%E6%95%B0%E6%8D%AE.pdf},
   title={2020能源数据},
   year={2021},
+  language = {中文;},
   author={王庆一}
 }
 
 @misc{Foneone2019时间序列,
   url={https://blog.csdn.net/foneone/article/details/90141213},
-  title={时间序列模型（ARIMA和ARMA）完整步骤详述},
+  title={{时间序列模型（ARIMA和ARMA）完整步骤详述}},
   year={2019},
   author={Foneone}
 }
 
 @inproceedings{朱智慧2010T639,
-  title={T639数值预报产品在南汇站风速预报中的统计释用},
+  title={{T639数值预报产品在南汇站风速预报中的统计释用}},
   author={朱智慧 and 黄宁立},
   booktitle={长三角科技论坛能源分论坛-长三角气象科技论坛},
+  language = {中文;},
   year={2010},
 }
 
@@ -28,35 +30,37 @@
   volume={43},
   number={6},
   pages={7},
+  language = {中文;},
   year={2019},
 }
 
 @article{朱霄旬2017遗传算法对,
-  title={遗传算法对SVR风速预测模型的多参数优化},
+  title={{遗传算法对SVR风速预测模型的多参数优化}},
   author={朱霄旬 and 徐搏超 and 焦宏超 and 韩中合},
   journal={电机与控制学报},
   volume={21},
   number={2},
   pages={6},
+  language = {中文;},
   year={2017},
 }
 
 @article{2018Hybrid,
-  title={Hybrid Short-Term Wind Speed Prediction Model by COA-SVR Based on Recursive Quantitative Analysis},
+  title={{Hybrid Short-Term Wind Speed Prediction Model by COA-SVR Based on Recursive Quantitative Analysis}},
   author={ Pan, C.  and  Tan, Q.  and  Cai, G.  and  Zhang, Z. },
   journal={Power System Technology},
   year={2018},
 }
 
 @article{2017Forecast,
-  title={Forecast of Wind Speed and Wing Power Based on Time Series},
+  title={{Forecast of Wind Speed and Wing Power Based on Time Series}},
   author={ Sun, R. N.  and F Wang and  University, J. N. },
   journal={Computer Knowledge and Technology},
   year={2017},
 }
 
 @article{2021Short,
-  title={Short-term offshore wind speed forecast by seasonal ARIMA - A comparison against GRU and LSTM},
+  title={{Short-term offshore wind speed forecast by seasonal ARIMA - A comparison against GRU and LSTM}},
   author={ Xl, A  and  Zi, L. B.  and  Zf, C },
   journal={Energy},
   volume={227},
@@ -64,7 +68,7 @@
 }
 
 @inproceedings{Shivani2019A,
-  title={A Comparative Study of ARIMA and RNN for Short Term Wind Speed Forecasting},
+  title={{A Comparative Study of ARIMA and RNN for Short Term Wind Speed Forecasting}},
   author={Shivani and  Sandhu, K. S.  and  Nair, Anil Ramachandran },
   booktitle={2019 10th International Conference on Computing, Communication and Networking Technologies (ICCCNT)},
   year={2019},
@@ -74,6 +78,7 @@
   title={风力发电企业价值评估研究},
   author={李仲蔚},
   school={湖南大学},
+  language = {中文;},
   year={2019},
 }
 
@@ -83,7 +88,7 @@
  journal = {Scientific Data},
  volume = {7},
  pages = {25},
- title = {The first high-resolution meteorological forcing dataset for land process studies over China}
+ title = {{The first high-resolution meteorological forcing dataset for land process studies over China}}
 }
 
 @article{37cab0ac-d066-4fb9-aa9c-1cf50d601096,
@@ -93,19 +98,19 @@
  volume = {150},
  number = {1},
  pages = {38-46},
- title = {On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau},
+ title = {{On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau}},
  year = {2010}
 }
 
 @inproceedings{haddad2019wind,
-  title={Wind and solar forecasting for renewable energy system using sarima-based model},
+  title={{Wind and solar forecasting for renewable energy system using sarima-based model}},
   author={Haddad, Maroua and Nicod, Jean and Mainassara, Yacouba Boubacar and Rabehasaina, Landy and Al Masry, Zeina and P{\'e}ra, Marie},
-  booktitle={International conference on time series and forecasting},
+  booktitle={{International conference on time series and forecasting}},
   year={2019}
 }
 
 @article{alencar2018hybrid,
-  title={Hybrid approach combining SARIMA and neural networks for multi-step ahead wind speed forecasting in Brazil},
+  title={{Hybrid approach combining SARIMA and neural networks for multi-step ahead wind speed forecasting in Brazil}},
   author={Alencar, David B and Affonso, Carolina M and Oliveira, Roberto CL and Jose Filho, CR},
   journal={IEEE Access},
   volume={6},
@@ -115,9 +120,10 @@
 }
 
 @article{陆冰鉴2020基于,
-  title={基于EEMD和LSTM的短期风速预测模型研究},
+  title={{基于EEMD和LSTM的短期风速预测模型研究}},
   author={陆冰鉴 and 周鹏 and 王兴 and 周可},
   journal={软件工程},
+  language = {中文;},
   number={3},
   pages={43-48},
   year={2020},
@@ -132,6 +138,7 @@
  publisher = {国家青藏高原科学数据中心},
  title = {中国区域地面气象要素驱动数据集（1979-2018）},
  url = {https://dx.doi.org/10.11888/AtmosphericPhysics.tpe.249369.file},
+ language = {中文;},
  year = {2019}
 }
 
@@ -147,7 +154,7 @@
 }
 
 @article{wang2021hesitant,
-  title={A hesitant fuzzy wind speed forecasting system with novel defuzzification method and multi-objective optimization algorithm},
+  title={{A hesitant fuzzy wind speed forecasting system with novel defuzzification method and multi-objective optimization algorithm}},
   author={Wang, Jianzhou and Li, Hongmin and Wang, Ying and Lu, Haiyan},
   journal={Expert Systems with Applications},
   volume={168},
@@ -157,7 +164,7 @@
 }
 
 @article{liu2021ensemble,
-  title={Ensemble forecasting system for short-term wind speed forecasting based on optimal sub-model selection and multi-objective version of mayfly optimization algorithm},
+  title={{Ensemble forecasting system for short-term wind speed forecasting based on optimal sub-model selection and multi-objective version of mayfly optimization algorithm}},
   author={Liu, Zhenkun and Jiang, Ping and Wang, Jianzhou and Zhang, Lifang},
   journal={Expert Systems with Applications},
   volume={177},
@@ -167,16 +174,18 @@
 }
 
 @phdthesis{谢义超2021基于,
-  title={基于CEEMDAN分解和改进的LSTM模型的短期风速预测},
+  title={{基于CEEMDAN分解和改进的LSTM模型的短期风速预测}},
   author={谢义超},
   school={武汉科技大学},
+  language = {中文;},
   year={2021},
 }
 
 @phdthesis{王秀2021基于,
-  title={基于WD-ARIMA-LSTM的短期风速预测},
+  title={{基于WD-ARIMA-LSTM的短期风速预测}},
   author={王秀},
   school={华北电力大学},
+  language = {中文;},
   year={2021},
 }
 
@@ -184,6 +193,7 @@
   title={风电场短期风速预测方法研究},
   author={朱丽娜},
   school={兰州理工大学},
+  language = {中文;},
   year={2021},
 }
 
@@ -194,11 +204,12 @@
   volume={45},
   number={001},
   pages={51-71},
+  language = {中文;},
   year={2019},
 }
 
 @article{huang1998empirical,
-  title={The empirical mode decomposition and the Hilbert spectrum for nonlinear and non-stationary time series analysis},
+  title={{The empirical mode decomposition and the Hilbert spectrum for nonlinear and non-stationary time series analysis}},
   author={Huang, Norden E and Shen, Zheng and Long, Steven R and Wu, Manli C and Shih, Hsing H and Zheng, Quanan and Yen, Nai-Chyuan and Tung, Chi Chao and Liu, Henry H},
   journal={Proceedings of the Royal Society of London. Series A: mathematical, physical and engineering sciences},
   volume={454},
@@ -209,7 +220,7 @@
 }
 
 @article{wu2009ensemble,
-  title={Ensemble empirical mode decomposition: a noise-assisted data analysis method},
+  title={{Ensemble empirical mode decomposition: a noise-assisted data analysis method}},
   author={Wu, Zhaohua and Huang, Norden E},
   journal={Advances in adaptive data analysis},
   volume={1},
@@ -220,7 +231,7 @@
 }
 
 @inproceedings{torres2011complete,
-  title={A complete ensemble empirical mode decomposition with adaptive noise},
+  title={{A complete ensemble empirical mode decomposition with adaptive noise}},
   author={Torres, Mar{\'\i}a E and Colominas, Marcelo A and Schlotthauer, Gaston and Flandrin, Patrick},
   booktitle={2011 IEEE international conference on acoustics, speech and signal processing (ICASSP)},
   pages={4144--4147},
@@ -229,7 +240,7 @@
 }
 
 @article{colominas2014improved,
-  title={Improved complete ensemble EMD: A suitable tool for biomedical signal processing},
+  title={{Improved complete ensemble EMD: A suitable tool for biomedical signal processing}},
   author={Colominas, Marcelo A and Schlotthauer, Gast{\'o}n and Torres, Mar{\'\i}a E},
   journal={Biomedical Signal Processing and Control},
   volume={14},
@@ -239,14 +250,14 @@
 }
 
 @article{chung2014empirical,
-  title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
+  title={{Empirical evaluation of gated recurrent neural networks on sequence modeling}},
   author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
   journal={arXiv preprint arXiv:1412.3555},
   year={2014}
 }
 
 @article{jolliffe2016principal,
-  title={Principal component analysis: a review and recent developments},
+  title={{Principal component analysis: a review and recent developments}},
   author={Jolliffe, Ian T and Cadima, Jorge},
   journal={Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
   volume={374},
@@ -257,14 +268,14 @@
 }
 
 @article{ruder2016overview,
-  title={An overview of gradient descent optimization algorithms},
+  title={{An overview of gradient descent optimization algorithms}},
   author={Ruder, Sebastian},
   journal={arXiv preprint arXiv:1609.04747},
   year={2016}
 }
 
 @article{qian1999momentum,
-  title={On the momentum term in gradient descent learning algorithms},
+  title={{On the momentum term in gradient descent learning algorithms}},
   author={Qian, Ning},
   journal={Neural networks},
   volume={12},
@@ -275,7 +286,7 @@
 }
 
 @inproceedings{nesterov1983method,
-  title={A method for unconstrained convex minimization problem with the rate of convergence O (1/k\^{} 2)},
+  title={{A method for unconstrained convex minimization problem with the rate of convergence}},
   author={Nesterov, Yurii},
   booktitle={Doklady an ussr},
   volume={269},
@@ -284,7 +295,7 @@
 }
 
 @inproceedings{bengio2013advances,
-  title={Advances in optimizing recurrent networks},
+  title={{Advances in optimizing recurrent networks}},
   author={Bengio, Yoshua and Boulanger-Lewandowski, Nicolas and Pascanu, Razvan},
   booktitle={2013 IEEE international conference on acoustics, speech and signal processing},
   pages={8624--8628},
@@ -293,7 +304,7 @@
 }
 
 @incollection{huber1992robust,
-  title={Robust estimation of a location parameter},
+  title={{Robust estimation of a location parameter}},
   author={Huber, Peter J},
   booktitle={Breakthroughs in statistics},
   pages={492--518},
@@ -302,20 +313,20 @@
 }
 
 @article{kingma2014adam,
-  title={Adam: A method for stochastic optimization},
+  title={{Adam: A method for stochastic optimization}},
   author={Kingma, Diederik P and Ba, Jimmy},
   journal={arXiv preprint arXiv:1412.6980},
   year={2014}
 }
 
 @article{dozat2016incorporating,
-  title={Incorporating nesterov momentum into adam},
+  title={{Incorporating nesterov momentum into adam}},
   author={Dozat, Timothy},
   year={2016}
 }
 
 @article{rumelhart1986learning,
-  title={Learning representations by back-propagating errors},
+  title={{Learning representations by back-propagating errors}},
   author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
   journal={nature},
   volume={323},
@@ -326,14 +337,14 @@
 }
 
 @article{cho2014learning,
-  title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
+  title={{Learning phrase representations using RNN encoder-decoder for statistical machine translation}},
   author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
   journal={arXiv preprint arXiv:1406.1078},
   year={2014}
 }
 
 @article{hochreiter1997long,
-  title={Long short-term memory},
+  title={{Long short-term memory}},
   author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
   journal={Neural computation},
   volume={9},
@@ -344,7 +355,7 @@
 }
 
 @article{hendrycks2016gaussian,
-  title={Gaussian error linear units (gelus)},
+  title={{Gaussian error linear units (gelus)}},
   author={Hendrycks, Dan and Gimpel, Kevin},
   journal={arXiv preprint arXiv:1606.08415},
   year={2016}
