--- a/code/4-All-Feature-Prophet-GRU.ipynb
+++ b/code/4-All-Feature-Prophet-GRU.ipynb
@@ -502,6 +502,7 @@
     "    model = keras.models.Sequential()\n",
     "    model.add(keras.layers.Flatten(input_shape=(1, len(weather_features))))\n",
     "    model.add(keras.layers.Dense(128, activation='gelu'))\n",
+    "    model.add(keras.layers.Dense(64, activation='gelu'))\n",
     "    model.add(keras.layers.Dropout(0.2))\n",
     "    model.add(keras.layers.Dense(1))\n",
     "    es_callback = keras.callbacks.EarlyStopping(patience = 50, restore_best_weights = True, monitor=\"loss\")\n",
