--- a/paper.tex
+++ b/paper.tex
@@ -155,10 +155,11 @@ hybrid model; neural network; deep learning; data science.
 }
 
 %生成目录
+\addtocontents{toc}{\protect\thispagestyle{empty}}
 \tableofcontents
-% \thispagestyle{empty}
 
 \begingroup
+\pagenumbering{gobble}
 \renewcommand{\addvspace}[1]{}
 \newcommand{\loflabel}{图} 
 \renewcommand{\numberline}[1]{\loflabel~#1\hspace*{1em}}
@@ -167,6 +168,7 @@ hybrid model; neural network; deep learning; data science.
 \newcommand{\lotlabel}{表}
 \renewcommand{\numberline}[1]{\lotlabel~#1\hspace*{1em}}
 \listoftables
+\clearpage
 \endgroup
 
 %文章主体
