--- a/paper.tex
+++ b/paper.tex
@@ -147,10 +147,12 @@ hybrid model, neural network, deep learning, data science
 \newcommand{\loflabel}{图} 
 \renewcommand{\numberline}[1]{\loflabel~#1\hspace*{1em}}
 \listoffigures
+\thispagestyle{empty}
 
 \newcommand{\lotlabel}{表}
 \renewcommand{\numberline}[1]{\lotlabel~#1\hspace*{1em}}
 \listoftables
+\thispagestyle{empty}
 \clearpage
 \endgroup
 
