--- a/paper.tex
+++ b/paper.tex
@@ -134,7 +134,7 @@ model proposed in this paper, we can significantly improve the accuracy of
 short-term wind speed prediction 12 hours in advance, so it has supremacy.
 }}
 {short-term wind speed forecast, 
-hybrid model, neural network, deep learning, data science
+hybrid model, neural network, deep learning, data science.
 }
 
 %生成目录
